--- a/css/main.css
+++ b/css/main.css
@@ -157,11 +157,11 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  background: #444;
-  color: #fff;
+  background: white;
   height: 100%;
   margin: 0;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -194,6 +194,7 @@ h1.lg-heading,
 h2.lg-heading,
 h3.lg-heading {
   font-size: 6rem;
+  color: white;
 }
 
 #home .lg-heading {
@@ -205,9 +206,24 @@ h3.lg-heading {
 h1.sm-heading,
 h2.sm-heading,
 h3.sm-heading {
+  color: white;
   margin-bottom: 2rem;
   padding: 0.2rem 1rem;
   background: rgba(73, 73, 73, 0.5);
+}
+.lg-heading-content {
+  color: #45474a;
+  font-size: 3rem;
+  margin: 5rem auto 0.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.heading-underline {
+  width: 5rem;
+  height: 0.3rem;
+  background-color: #18a062;
+  margin: 0 auto 2rem;
 }
 
 #home .sm-heading {
@@ -260,12 +276,12 @@ main .icon-arow i {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "bioimage bioimage  bio bio" "job1 job2 job3 job4";
+  grid-template-columns: repeat(4, 1fr);
 }
 .about-info .bio-image {
   grid-area: bioimage;
-  margin: auto;
+  margin: auto auto 3rem auto;
   border-radius: 50%;
   border: #18a062 3px solid;
 }
@@ -282,10 +298,12 @@ main .icon-arow i {
 .about-info .job-3 {
   grid-area: job3;
 }
+.about-info .job-4 {
+  grid-area: job4;
+}
+
 .about-info .job {
-  background: #3a3a3a;
   padding: 0.5rem;
-  border-bottom: #18a062 5px solid;
 }
 
 .projects {
@@ -405,7 +423,7 @@ main .icon-arow i {
     height: 150px;
   }
   .about-info {
-    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
+    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3" "job4";
     grid-template-columns: 1fr;
   }
   .projects {
